Make a composite one Tab stop, and derive where Tab comes back to
`radio` and `radio-group` are the third and fourth controls, and the first
widget that is a *set* rather than a control. Three things that were trivially
true for `button` and `checkbox` stop being true for a set, and each one is a
decision rather than an implementation detail.

Traversal first. design-system.md 7.2 asks for one Tab stop with roving arrow
keys, and nothing could express it: `moveFocus` collected every focusable node
in document order, and a radio is one. `Handles.focusScope()` is the whole
opt-in -- false by default, one entry in the Tab order, arrows inside. Both
halves are the ROUTER's, by the argument already written on Tab: which node an
arrow reaches is a property of the group's shape, and the radio the focus is on
cannot see its siblings. Arrows are handled after the focused chain declines
the key, in the same place accelerators are, so a slider stepping its value
keeps its own. Both axes rove, because the group's direction is the
stylesheet's and `.inline` flips it.

Where Tab RE-ENTERS is derived from `:checked`, not remembered. This is the
part worth the record. The obvious implementation is a stored roving position,
and it is wrong in a way that only shows later: it is a second piece of state
beside the selection, and the two disagree the first time an application sets
the value itself -- returning the user to the option they last *looked at*
rather than the one that is *on*. No event would fix it, because a property
being set does not know a router exists. Derived, the selection IS the roving
position: nothing to invalidate, nothing to leak when an element unmounts, and
one test -- focus leaves, the model changes underneath, Tab comes back to the
new selection -- that the stored version fails.

The invariant is the group's, on every build. "Exactly one is on" is a fact
about the set and no radio can hold it, so `selected` is deliberately NOT a KDL
attribute: a document that